--- a/erasmus/src/erasmus/requirements.txt
+++ b/erasmus/src/erasmus/requirements.txt
@@ -1,11 +1,38 @@
 asgiref==3.5.2
+astroid==2.4.2
+colorama==0.4.4
+cycler==0.10.0
 distlib==0.3.5
 Django==4.0.6
+django-crispy-forms==1.14.0
 django-widget-tweaks==1.4.12
 filelock==3.7.1
+isort==5.7.0
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+lxml==4.9.2
+matplotlib==3.3.4
+mccabe==0.6.1
+more-itertools==7.2.0
+mysql-connector-python==8.0.24
+numpy==1.19.5
+packaging==19.2
+pandas==1.2.1
+Pillow==8.1.0
 platformdirs==2.5.2
+pluggy==0.13.1
 psycopg2==2.9.3
+py==1.8.0
+pylint==2.6.0
+pyparsing==2.4.5
+python-dateutil==2.8.1
+python-docx==0.8.11
+pytz==2020.5
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 tzdata==2022.1
 virtualenv==20.15.1
+wcwidth==0.1.7
+wrapt==1.12.1
+zipp==0.6.0
