--- a/erasmus/src/erasmus/requirements.txt
+++ b/erasmus/src/erasmus/requirements.txt
@@ -9,3 +9,7 @@ six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
 virtualenv==20.15.1
+django-crispy-forms==1.14.0
+pytz==2020.5
+python-docx==0.8.11
+python-dateutil==2.8.1
