Student course approval

--- a/erasmus/src/erasmus/requirements.txt
+++ b/erasmus/src/erasmus/requirements.txt
@@ -1,18 +1,17 @@
 asgiref==3.5.2
+aspose-words==22.12.0
 distlib==0.3.5
 Django==4.0.6
+django-crispy-forms==1.14.0
 django-widget-tweaks==1.4.12
 filelock==3.7.1
+lxml==4.9.2
 platformdirs==2.5.2
-<<<<<<< HEAD
-=======
-
->>>>>>> cb7d4402539e921182a24417164b737ceff2df2b
+psycopg2==2.9.5
+python-dateutil==2.8.1
+python-docx==0.8.11
+pytz==2020.5
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
 virtualenv==20.15.1
-django-crispy-forms==1.14.0
-pytz==2020.5
-python-docx==0.8.11
-python-dateutil==2.8.1
